# solabi

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  decoder.h  decoder_fwd.h  types.h  utils.h
cmake/: solabiConfig.cmake.in
example/: CMakeLists.txt  main.cpp
include/solabi/: common.h  decoder.h  decoder_fwd.h  types.h  utils.h
tests/: abi_decode_composites_test.cpp  abi_decode_primitives_test.cpp  abi_decode_test.cpp  abi_vectors.h  smoke_test.cpp  test_types.h  type_traits_test.cpp  utils_test.cpp
tools/: generate_abi_vectors.py
